--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyandroid"
-version = "1.2.0"
+name = "pyandroid-dev"
+version = "1.2.1"
 authors = [
     {name = "Subhobhai", email = "your-email@example.com"},
 ]
