--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "pyandroid-dev"
 version = "1.2.1"
 authors = [
-    {name = "Subhobhai", email = "your-email@example.com"},
+    {name = "Subhobhai", email = "sarkarsubhadip604@gmail.com"},
 ]
 description = "A comprehensive Python library for creating Android applications with GUI support"
 readme = "README.md"
