--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyandroid-dev"
-version = "1.2.1"
+version = "1.3.0"
 authors = [
     {name = "Subhobhai", email = "sarkarsubhadip604@gmail.com"},
 ]
-description = "A comprehensive Python library for creating Android applications with GUI support"
+description = "A comprehensive Python library for creating Android applications with GUI support. Now with full docs."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -35,7 +35,7 @@ license = {text = "PyAndroid Custom License v1.0"}
 "Homepage" = "https://github.com/subhobhai943/pyandroid-dev"
 "Bug Reports" = "https://github.com/subhobhai943/pyandroid-dev/issues"
 "Source" = "https://github.com/subhobhai943/pyandroid-dev"
-"Documentation" = "https://github.com/subhobhai943/pyandroid-dev/wiki"
+"Documentation" = "https://github.com/subhobhai943/pyandroid-dev/tree/main/docs"
 
 [project.optional-dependencies]
 gui = [
