--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     
     steps:
       - uses: actions/checkout@v4
@@ -28,13 +28,15 @@ jobs:
           pip install pytest pytest-cov
           pip install -e .
       
-      - name: Run tests
+      - name: Run tests with coverage
         run: |
-          pytest --cov=pyandroid tests/
+          pytest --cov=pyandroid --cov-report=xml --cov-report=term tests/
       
-      - name: Upload coverage
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        if: matrix.python-version == '3.11'
         with:
           file: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
+          fail_ci_if_error: false
