--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyandroid-dev"
-version = "1.3.0"
+version = "1.4.0"
 authors = [
     {name = "Subhobhai", email = "sarkarsubhadip604@gmail.com"},
 ]
-description = "A comprehensive Python library for creating Android applications with GUI support. Now with full docs."
+description = "A comprehensive Python library for creating Android-like applications with GUI support, improved error handling, and full type hints."
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -18,7 +18,6 @@ classifiers = [
     "Topic :: Software Development :: User Interfaces",
     "License :: Other/Proprietary License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -27,8 +26,9 @@ classifiers = [
     "Operating System :: OS Independent",
     "Environment :: Console",
     "Environment :: X11 Applications",
+    "Typing :: Typed",
 ]
-keywords = ["android", "mobile", "app", "development", "kivy", "gui", "cross-platform"]
+keywords = ["android", "mobile", "app", "development", "kivy", "gui", "cross-platform", "framework"]
 license = {text = "PyAndroid Custom License v1.0"}
 
 [project.urls]
@@ -64,13 +64,15 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+addopts = "-v --strict-markers"
 
 [tool.black]
 line-length = 100
-target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
+target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
 
 [tool.mypy]
-python_version = "3.7"
+python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
+ignore_missing_imports = true
